RESOLVED FIXED276402
[REGRESSION][ToT][Sim] WebXR immersive sessions render black in simulator
https://bugs.webkit.org/show_bug.cgi?id=276402
Summary [REGRESSION][ToT][Sim] WebXR immersive sessions render black in simulator
Dan Glastonbury
Reported 2024-07-09 18:14:34 PDT
Summary: [REGRESSION] WebXR immersive sessions render black in simulator Steps To Reproduce: 1. Load https://xrdinosaurs.com 2. Select “Visit our Dinosaurs in Virtual Reality” and select Allow for the permission prompt. Results: The immersive scene is all black. Regression: I’ve narrowed the regression to be caused by this change: https://commits.webkit.org/280523@main rdar://128041507 ([WebXR] ANGLE extension to expose explicit MSAA resolve target (274137))
Attachments
Dan Glastonbury
Comment 1 2024-07-09 18:14:52 PDT
Dan Glastonbury
Comment 2 2024-07-09 18:21:36 PDT
EWS
Comment 3 2024-07-09 22:07:52 PDT
Committed 280805@main (a05188f93c2a): <https://commits.webkit.org/280805@main> Reviewed commits have been landed. Closing PR #30628 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.