[WebXR] Fix immersive VR rendering for shared layout. https://bugs.webkit.org/show_bug.cgi?id=276402 rdar://131356393

Reviewed by Mike Wyrzykowski.

After https://commits.webkit.org/280523@main, WebXR immersive sessions render
black in simulator.

Outside of the simulator, we always blit from a staging texture to the final
output because we need to place each eye into the correct layer of a Metal
texture. In the simulator, the code tried to optimize to avoid the extra
copy. To fix the issue, I've made the shared layout case work exactly like the
layered layout case.

* Source/WebCore/Modules/webxr/WebXROpaqueFramebufferCocoa.cpp:
(WebCore::WebXROpaqueFramebuffer::blitShared):
(WebCore::WebXROpaqueFramebuffer::setupFramebuffer):

Canonical link: https://commits.webkit.org/280805@main